components/RewardGameCard/styles.module.scss
.gameCard {
  background: #ffffff;
  border-radius: 1rem !important;
  filter: blur(0px);
  cursor: pointer;

  .gameImage {
    position: relative;
    width: 100%;
    padding-bottom: 51.2%;
    overflow: hidden;

    img {
      object-fit: cover;
    }

    .cardTag {
      position: absolute;
      top: 0;
      left: 0;
      background: linear-gradient(180deg, #fad961 0%, #f76b1c 100%);
      border-radius: 0.67rem 0rem 1.67rem 0rem;
      font-size: 1.17rem;
      font-family: Inter-Bold, Inter;
      font-weight: bold;
      color: #ffffff;
      line-height: 1.17rem;
      padding: 0.67rem 1.17rem 0.83rem 1rem;
    }
  }

  .gameContent {
    padding: 1.33rem 1.33rem 1.42rem;

    .cardTitle {
      p {
        font-size: 1.75rem;
        font-family: Inter-SemiBold, Inter;
        font-weight: 600;
        color: #222222;
        line-height: 1.75rem;
        margin-bottom: 0.83rem;
      }
      .taskItem {
        display: flex;
        align-items: center;

        font-size: 1.17rem;
        font-family: Inter-Medium, Inter;
        font-weight: 500;
        color: #222222;
        // line-height: 1.17rem;

        .iconBox {
          flex-grow: 0;
          flex-shrink: 0;
          width: 1.67rem;
          height: 1.67rem;
          position: relative;
          margin-right: 0.33rem;
        }
        span {
          overflow: hidden;
          text-overflow: ellipsis;
          white-space: nowrap;
        }
      }
      .rewardItem {
        display: flex;
        align-items: center;
        margin-top: 0.58rem;
        font-size: 1.17rem;
        font-family: Inter-Medium, Inter;
        font-weight: 500;
        color: #222222;
        // line-height: 1.17rem;

        .iconBox {
          flex-grow: 0;
          flex-shrink: 0;
          position: relative;
          width: 1.67rem;
          height: 1.67rem;
          margin-right: 0.33rem;
          img {
            object-fit: contain;
          }
        }

        span {
          overflow: hidden;
          text-overflow: ellipsis;
          white-space: nowrap;
        }
      }
    }

    .taskProgress {
      border-top: 1px solid rgba($color: #222, $alpha: 0.1);
      padding-top: 1.25rem;
      margin-top: 0.75rem;
      font-size: 1rem;
      font-family: Inter-Medium, Inter;
      font-weight: 500;
      color: #787878;
      line-height: 1rem;

      display: flex;
      justify-content: space-between;
      span {
        color: rgba(142, 80, 228, 1);
      }
    }
  }
}

@media screen and (max-width: 600px) {
  .gameCard {
    border-radius: 0.67rem !important;
    .gameContent {
      padding: 1rem 1rem 1.33rem !important;

      .cardTitle {
        p {
          font-size: 1.5rem;
          font-family: Inter-Bold, Inter;
          font-weight: bold;
          color: #222222;
          line-height: 1.5rem;
          margin-bottom: 1rem;
        }

        .rewardItem {
          font-size: 1.17rem;
          font-family: Inter-Medium, Inter;
          font-weight: 500;
          color: #8e50e4;
          // line-height: 1.5rem;
          // margin-top: 0.67rem !important;
        }

        .taskItem {
          font-size: 1.17rem;
          font-family: Inter-Medium, Inter;
          font-weight: 500;
          color: #222222;
          // line-height: 1.17rem;
        }
      }

      .taskProgress {
        padding-top: 0.92rem;
      }
    }
  }
}

